# MESC_Firmware

./: .clang-format  .cproject  .gitignore  .mxproject  .project  .~lock.Third harmonic injection simulation.ods#  404.html  CAN_IMPLEMENTATION.md  CCER  CLI_IMPLEMENTATION.md  LICENSE  MESC_Firmware Debug STLink.launch  MESC_Firmware Debug.launch  MESC_Firmware.ioc  MESC_TUTORIAL_VIDEO1.md  MESC_TUTORIAL_VIDEO1.md~  MESC_TUTORIAL_VIDEO2.md  MESC_TUTORIAL_VIDEO2.md~  OLDREADME.md  README.md  RTOS_UNWIND.md  RTOS_UNWIND_HANDOFF.md  STM32F303CBTX_FLASH.ld  VSCODE_BOOTUP_COMMENTS.md  VSCODE_BUILD_SETUP.md  book.toml  deploy.sh  foc.h  gen_sin_lut.c  gen_sin_lut.sh  hw_setup.h  index.html  input_vars.min_request_Idq.q  motor_state.h  mx.scratch  print.html  searchindex.js  searchindex.json  sin_lut.c  sin_lut.h
Axis-Throttle/: .cproject  .mxproject  .project  Axis-Throttle Debug.launch  Axis-Throttle.ioc  STM32L432KBUX_FLASH.ld
Core/BIST/: CMakeLists.txt  bist.c  bist_bat.c  bist_cli.c  bist_profile.c  bist_speed.c  bist_temp.c  init.bat  init.sh  make.sh  virt_uart.c
Core/Inc/: FreeRTOSConfig.h  MESCBLDC.h  MESC_Comms.h  MESCbat.h  MESCcli.h  MESCflash.h  MESCfnv.h  MESCfoc.h  MESChw_setup.h  MESCmotor_state.h  MESCprofile.h  MESCsin_lut.h  MESCspeed.h  MESCtemp.h  MESCui.h  bit_op.h  conversions.h  main.h  pp_op.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h  string_op.h
Core/Src/: MESCBLDC.c  MESC_Comms.c  MESCbat.c  MESCcli.c  MESCflash.c  MESCfnv.c  MESCfoc.c  MESChw_setup.c  MESCmotor_state.c  MESCprofile.c  MESCspeed.c  MESCtemp.c  MESCuart.c  flash_driver.c  flash_driver.h  flash_wrapper.c  flash_wrapper.h  freertos.c  main.c  stm32f3xx_hal_msp.c  stm32f3xx_hal_timebase_tim.c  stm32f3xx_it.c
DASH_F407VET6/: .cproject  .gitmodules  .mxproject  .project  3ph_Inverter Debug.cfg  3ph_Inverter Debug.launch  DASH_F407VET6 Debug.launch  DASH_F407VET6.ioc  STM32F407VETX_FLASH.ld  STM32F407VETX_RAM.ld
Debug/: MESC_Firmware.elf  MESC_Firmware.list  MESC_Firmware.map  makefile  objects.list  sources.mk
MESC_Common/BIST/: CMakeLists.txt  bist.c  bist_bat.c  bist_cli.c  bist_profile.c  bist_speed.c  bist_temp.c  gen_profile.c  init.sh  make.sh  virt_flash.c  virt_flash.h  virt_uart.c  virt_uart.h
MESC_Common/BIST/virt/: stm32fxxx_hal.h
MESC_Common/Inc/: MESCApp.h  MESCBLDC.h  MESC_BLDC.h  MESC_Comms.h  MESC_INTERNAL.h  MESC_MOTOR_DEFAULTS.h  MESC_STM.h  MESC_jitter.h  MESCbat.c  MESCbat.h  MESCcli.h  MESCerror.h  MESCflash.h  MESCfluxobs.h  MESCfnv.h  MESCfoc.h  MESChfi.h  MESChw_setup.h  MESCinput.h  MESClrobs.h  MESCmeasure.h  MESCmotor.h  MESCmotor_state.h  MESCposition.h  MESCprofile.h  MESCpwm.h  MESCsin_lut.h  MESCspeed.h  MESCtemp.c  MESCtemp.h  MESCuart.c  MESCuart.h  MESCui.c  MESCui.h  MPU6050.h  Simple_coms.h  bit_op.h  conversions.h  fingerprint.h  flash_driver.h  (+4 more)
MESC_Common/Src/: ISRtimes.txt  MESCApp.c  MESCBLDC.c  MESC_BLDC.c  MESC_Comms.c  MESCbat.c  MESCcli.c  MESCerror.c  MESCflash.c  MESCfluxobs.c  MESCfnv.c  MESCfoc.c  MESChfi.c  MESChw_setup.c  MESCinput.c  MESClrobs.c  MESCmeasure.c  MESCmotor.c  MESCmotor_state.c  MESCposition.c  MESCprofile.c  MESCpwm.c  MESCsin_lut.c  MESCspeed.c  MESCtemp.c  MESCuart.c  MESCui.c  MPU6050.c  Simple_coms.c  flash_driver.c  flash_wrapper.c  fonts.c  pid.c  pid.h  sin_cos.h  ssd1306.c
MESC_Common/UI/: README  pack_www.bash  setup_Win.bat  setup_Win10_mklink.bat  setup_linux.bash  setup_linux_symlink.bash
MESC_F303CB/: .cproject  .mxproject  .project  MESC_F303CB Debug noupload.launch  MESC_F303CB Debug.launch  MESC_F303CB.ioc  MESC_Firmware Debug (1).launch  MESC_Firmware Debug.launch  STM32F303CBTX_FLASH.ld  State_Machine_sketch.c  Third harmonic injection simulation.ods
MESC_F401CC/: .cproject  .mxproject  .project  MESC_F401CC Debug.launch  MESC_F401CC.ioc  STM32F401CCUX_FLASH.ld
MESC_F405RG/: .cproject  .mxproject  .project  F405 - ISOL.cfg  F405 - ISOL.launch  F405 - ST-Link.launch  MESC_F405RG Debug STLink noDL.launch  MESC_F405RG Debug STLink.launch  MESC_F405RG Debug noDL STLink.launch  MESC_F405RG Debug noDL.launch  MESC_F405RG Debug.launch  MESC_F405RG.ioc  STM32F405RGTX_FLASH.ld  mx.scratch
MESC_F405RG_Stepper/: .cproject  .mxproject  .project  MESC_F405RG Debug STLink.launch  MESC_F405RG_stepper Debug.launch  MESC_F405RG_stepper.ioc  STM32F405RGTX_FLASH.ld
MESC_F407VG_Display/: .cproject  .mxproject  .project  MESC_J-Display.ioc  STM32F407VGTX_FLASH.ld  STM32F407VGTX_RAM.ld
MESC_F411CE/: .cproject  .mxproject  .project  MESC_F411CE Debug.launch  MESC_F411CE.ioc  STM32F411CEUX_FLASH.ld  STM32F411CEUX_RAM.ld
MESC_Interface/Common/: RTOS_flash.c  RTOS_flash.h
MESC_Interface/MESC/: MESCinterface.c  MESCinterface.h  calibrate.c  hfi.h
MESC_Interface/TTerm/: README.md  TTerm_config.h
MESC_Interface/Tasks/: CAN_helper.c  CAN_types.h  app_template.c  app_template.h  apps.c  can_ids.h  init.c  overlay_types.h  task_can.c  task_can.h  task_cli.c  task_cli.h  task_overlay.c  task_overlay.h  top.h
MESC_L431RC/: .cproject  .mxproject  .project  MESC_L431RC Debug.launch  MESC_L431RC.ioc  STM32L431RCTX_FLASH.ld
MESC_RTOS/AXIS/: MESCinterface.c  MESCinterface.h  MESCmotor_state.h  app_encoder.c  app_encoder.h
MESC_RTOS/Common/: RTOS_flash.c
MESC_RTOS/Dash/: MESCinterface.c  MESCinterface.h  MESCmotor_state.h
MESC_RTOS/MESC/: CLI_VALUES.txt  MESCinterface.c  MESCinterface.h  calibrate.c  hfi.c  task_LED.c  task_LED.h
MESC_RTOS/TTerm/: TTerm_config.h
MESC_RTOS/Tasks/: apps.c  (+26 more)
MP2/: INTRO.html
book/: 404.html  THEORY.md~  hardware.html  index.html  print.html  searchindex.js  searchindex.json
can_driver/: dropped_values.py  interpret_balance_log.py
can_testing/: README.md  continuous_run.py  params.json
debugging/: DEBUGGING.html  FIRMWARE_INTRO.html
introduction/: FEATURES.html  FOREWORD.html  INTRODUCTION.html  LICENSE.html
operation/: CONTROL.html  INTRODUCTION.html  PORTING.html  THEORY.html
scripts/: build_and_upload_f405rg.sh  build_f405rg.sh  preflight_f405rg.sh  upload_f405rg.sh
src/: CONTROL.md~  SUMMARY.md  THEORY.md
teensy/: README.md  baby_pi_test.py  platformio.ini
(+392 files in other folders)
