CMAKE_MINIMUM_REQUIRED( VERSION 3.10 )
PROJECT( BIST )

IF(MSVC)
    SET( CMAKE_C_FLAGS         "/W4 /MP" )
    SET( CMAKE_C_FLAGS_DEBUG   "/Od /GS /ZI /RTC1" )
    SET( CMAKE_C_FLAGS_RELEASE "/O2 /GF" )
    
    ADD_DEFINITIONS( /D_CRT_SECURE_NO_WARNINGS )
ELSE()
    SET( CMAKE_C_FLAGS         "-Wall -Wextra -pedantic -std=c11" )
    SET( CMAKE_C_FLAGS_DEBUG   "-O0 -g -ggdb3" )
    SET( CMAKE_C_FLAGS_RELEASE "-O2" )
ENDIF()

SET( ${PROJECT_NAME}_inc
    ${CMAKE_CURRENT_LIST_DIR}/../Gen
    ${CMAKE_CURRENT_LIST_DIR}/../Inc
)

SET( ${PROJECT_NAME}_hdr
    ${CMAKE_CURRENT_LIST_DIR}/../Inc/bit_op.h
    ${CMAKE_CURRENT_LIST_DIR}/../Inc/conversions.h
    ${CMAKE_CURRENT_LIST_DIR}/../Inc/pp_op.h

    ${CMAKE_CURRENT_LIST_DIR}/../Inc/MESCbat.h
    ${CMAKE_CURRENT_LIST_DIR}/../Inc/MESCcli.h
    ${CMAKE_CURRENT_LIST_DIR}/../Inc/MESCfnv.h
    ${CMAKE_CURRENT_LIST_DIR}/../Inc/MESCprofile.h
    ${CMAKE_CURRENT_LIST_DIR}/../Inc/MESCspeed.h
    ${CMAKE_CURRENT_LIST_DIR}/../Inc/MESCtemp.h
)

SET( ${PROJECT_NAME}_src
    ${CMAKE_CURRENT_LIST_DIR}/../Gen/ntc.c

    ${CMAKE_CURRENT_LIST_DIR}/../Src/MESCbat.c
    ${CMAKE_CURRENT_LIST_DIR}/../Src/MESCcli.c
    ${CMAKE_CURRENT_LIST_DIR}/../Src/MESCfnv.c
    ${CMAKE_CURRENT_LIST_DIR}/../Src/MESCprofile.c
    ${CMAKE_CURRENT_LIST_DIR}/../Src/MESCspeed.c
    ${CMAKE_CURRENT_LIST_DIR}/../Src/MESCtemp.c

    ${CMAKE_CURRENT_LIST_DIR}/bist.c
    ${CMAKE_CURRENT_LIST_DIR}/bist_bat.c
    ${CMAKE_CURRENT_LIST_DIR}/bist_cli.c
    ${CMAKE_CURRENT_LIST_DIR}/bist_profile.c
    ${CMAKE_CURRENT_LIST_DIR}/bist_speed.c
    ${CMAKE_CURRENT_LIST_DIR}/bist_temp.c
)

ADD_EXECUTABLE( ${PROJECT_NAME} ${${PROJECT_NAME}_hdr} ${${PROJECT_NAME}_src} )

TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME} PUBLIC ${${PROJECT_NAME}_inc} )

IF(MSVC)
    SET_PROPERTY( DIRECTORY ${CMAKE_CURRENT_LIST_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME} )

    SOURCE_GROUP( "Gen" REGULAR_EXPRESSION "Gen/" )
ELSE()
    TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PUBLIC m )
ENDIF()
